多方块内部结构优化